<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HRT Routes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>

    <!-- Main Activity -->
    <string name="button_search_route">Search route!</string>
    <string name="button_login">Log in</string>
    <string name="button_logout">Log out</string>
    <string name="button_register">Register</string>
    <string name="title_activity_search_route">SearchRoute</string>
    <string name="hello_world">Hello world!</string>

    <!-- Register and Login -->
    <string name="label_reg_name">Name:</string>
    <string name="hint_reg_name">Type your name</string>
    <string name="label_reg_nickname">Username:</string>
    <string name="hint_reg_nickname">Type your username</string>
    <string name="label_reg_password">Password:</string>
    <string name="button_cancel_login">Cancel</string>

    <!-- User registered dialog -->
    <string name="dialog_user_registered_title">Succesfull registration</string>
    <string name="dialog_user_registered">The user has been registered.</string>
    <string name="dialog_user_registered_button">Continue</string>

    <!-- Nickname error dialog -->
    <string name="dialog_nickname_error_title">Registration failed</string>
    <string name="dialog_nickname_error">It already exists a user with the same username.</string>
    <string name="dialog_nickname_error_button">Back</string>

    <!-- Logged in dialog -->
    <string name="dialog_logged_in_title">Succesfull log in</string>
    <string name="dialog_logged_in">The user has been logged in.</string>
    <string name="dialog_logged_in_button">Continue</string>

    <!-- User do not exists dialog -->
    <string name="dialog_user_not_exists_title">Error log in</string>
    <string name="dialog_user_not_exists">The user do not exists.</string>
    <string name="dialog_user_not_exists_button">Back</string>

    <!-- Incorrect password -->
    <string name="dialog_incorrect_password_title">Error log in</string>
    <string name="dialog_incorrect_password">The password is incorrect.</string>
    <string name="dialog_incorrect_password_button">Back</string>

    <!-- Search Route -->
    <string name="text_view_from">From:</string>
    <string name="edit_text_from">Type the origin</string>
    <string name="text_view_to">To:</string>
    <string name="edit_text_to">Type the destination</string>
    <string name="text_view_time">Time:</string>
    <string name="text_view_time_hint">Departure time</string>
    <string name="text_view_date">Date:</string>
    <string name="text_view_date_hint">Departure day</string>
    <string name="button_pick_time">Pick time</string>
    <string name="button_pick_date">Pick date</string>
    <string name="button_saved_journeys">Saved journeys</string>
    <string name="departure_radio_button">Departure</string>
    <string name="arrival_radio_button">Arrival</string>

    <!-- Search Route Result -->
    <string name="text_view_select_route">Select a route:</string>
    <string name="button_change_search">Change search</string>
    <string name="button_save_journey">Save journey</string>
    <string name="dialog_no_route_found_button">Change search</string>
    <string name="dialog_no_route_found">No route found for the journey.</string>
    <string name="dialog_no_route_found_title">No results</string>

    <!-- Not network dialog -->
    <string name="dialog_network_title">Network status</string>
    <string name="dialog_not_network">The mobile devince is not connected to the network</string>
    <string name="dialog_network_neutral_button">Back</string>
    <string name="title_activity_search_route_result">SearchRouteResultActivity</string>
    <string name="title_activity_saved_journeys">SavedJourneysActivity</string>
	
    <!-- Save journeys-->
    <string name="edit_text_journey_id">Type journey identifier</string>
    
    <!-- Select saved journeys -->
    <string name="text_view_select_journey">Select a journey:</string>
    <string name="button_select_journey">Select journey</string>
    <string name="button_back_journey">Back</string>
    <string name="text_view_journey_id">Journey identifier:</string>
    <string name="text_view_journey_from">From:</string>
    <string name="text_view_journey_to">To:</string>
    <string name="title_activity_save_journey">SaveJourneyActivity</string>

</resources>
