<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_from"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editTextFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_text_from"
            android:ems="10" />
        
        <ImageButton
                android:id="@+id/buttonGetLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:onClick="getLocation"
               	android:src="@android:drawable/ic_menu_mylocation" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_to"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_to"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

		
    <RadioGroup 
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:orientation="horizontal">
	    
        <RadioButton
            android:id="@+id/radioButtonDeparture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"
            android:text="@string/departure_radio_button"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioButtonArrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arrival_radio_button"
            android:onClick="onRadioButtonClicked"/>
        
	</RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewPickTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:paddingLeft="20dip"
            android:hint="@string/text_view_time_hint"
            android:ems="10" />
        
        <Button
            android:id="@+id/buttonPickTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:onClick="showTimePickerDialog"
            android:text="@string/button_pick_time" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewPickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:paddingLeft="20dip"
            android:hint="@string/text_view_date_hint"
            android:ems="10" />
        
        <Button
            android:id="@+id/buttonPickDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:onClick="showDatePickerDialog"
            android:text="@string/button_pick_date" />

    </LinearLayout>

    <Button
        android:id="@+id/searchRouteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_search_route" 
        android:onClick="searchRoute" />

    <Button
        android:id="@+id/savedJourneyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_saved_journeys"
        android:onClick="checkSavedJourneys"/>

</LinearLayout>
