<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textRegName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_reg_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextRegName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_reg_name"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/textRegUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_reg_nickname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextRegUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_reg_nickname"
        android:ems="10" />
    
    <TextView
        android:id="@+id/textRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_reg_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerUser"
        android:text="@string/button_register" />

</LinearLayout>
