<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_reg_nickname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_reg_nickname"
        android:ems="10" />
    
    <TextView
        android:id="@+id/textLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_reg_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/button_login" />

    <Button
        android:id="@+id/buttonCancelLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        android:text="@string/button_cancel_login" />

</LinearLayout>
